plugins {
    id'com.github.johnrengelman.shadow' version '4.0.4'
    id 'java'
}

group 'net.dirtcraft'
version '3.0'

sourceCompatibility = 1.8

repositories {
    jcenter()
    mavenCentral()
    maven { url 'https://jitpack.io/' }
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
}

dependencies {
    compile ('net.dv8tion:JDA:3.8.3_463')/* {
        exclude module: 'opus-java'
    }*/
    implementation 'com.sedmelluq:lavaplayer:1.3.22'
    implementation 'org.apache.commons:commons-lang3:3.9'
    implementation 'org.mariadb.jdbc:mariadb-java-client:2.4.1'
    implementation 'com.electronwill.night-config:core:3.6.0'
    implementation 'com.electronwill.night-config:toml:3.6.0'
    implementation "net.lingala.zip4j:zip4j:1.3.3"
    implementation 'com.google.code.gson:gson:2.8.5'
    implementation 'com.vdurmont:emoji-java:4.0.0'
    implementation 'com.github.lucaazalim:minecraft-server-ping:-SNAPSHOT'
    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.2'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
    implementation group: 'org.reflections', name: 'reflections', version: '0.9.11'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'net.dirtcraft.dirtbot.DirtBot'
        )
    }
}


compileJava {
    options.incremental = false
}

compileJava.options.encoding = 'UTF-8'
